--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -20,6 +20,15 @@ body {
   background: var(--siphon);
 }
 
+p,
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+  padding: 0;
+}
+
 .home {
   display: flex;
   flex-direction: column;
